tests/baselines/reference/assignmentCompatWithObjectMembers4.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(24,5): error TS2322: Type 'T' is not assignable to type 'S'.
  Types of property 'foo' are incompatible.
    Property 'bar' is missing in type 'Derived2' but required in type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(25,5): error TS2322: Type 'S' is not assignable to type 'T'.
  Types of property 'foo' are incompatible.
    Property 'baz' is missing in type 'Derived' but required in type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(29,5): error TS2322: Type 'T2' is not assignable to type 'S2'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(30,5): error TS2322: Type 'S2' is not assignable to type 'T2'.
  Types of property 'foo' are incompatible.
    Type 'Derived' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(31,5): error TS2322: Type 'T' is not assignable to type 'S2'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(32,5): error TS2322: Type '{ foo: Derived2; }' is not assignable to type 'S2'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(35,5): error TS2322: Type '{ foo: Derived2; }' is not assignable to type '{ foo: Derived; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(36,5): error TS2322: Type '{ foo: Derived; }' is not assignable to type '{ foo: Derived2; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(41,5): error TS2322: Type '{ foo: Derived2; }' is not assignable to type '{ foo: Derived; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(42,5): error TS2322: Type '{ foo: Derived; }' is not assignable to type '{ foo: Derived2; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(43,5): error TS2322: Type '{ foo: Derived2; }' is not assignable to type '{ foo: Derived; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(44,5): error TS2322: Type 'T2' is not assignable to type '{ foo: Derived; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(45,5): error TS2322: Type 'T' is not assignable to type '{ foo: Derived; }'.
  Types of property 'foo' are incompatible.
    Type 'Derived2' is not assignable to type 'Derived'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(70,5): error TS2322: Type 'S' is not assignable to type 'T'.
  Types of property 'foo' are incompatible.
    Property 'baz' is missing in type 'Base' but required in type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(75,5): error TS2322: Type 'S2' is not assignable to type 'T2'.
  Types of property 'foo' are incompatible.
    Type 'Base' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(81,5): error TS2322: Type '{ foo: Base; }' is not assignable to type '{ foo: Derived2; }'.
  Types of property 'foo' are incompatible.
    Type 'Base' is not assignable to type 'Derived2'.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts(87,5): error TS2322: Type '{ foo: Base; }' is not assignable to type '{ foo: Derived2; }'.
  Types of property 'foo' are incompatible.
    Type 'Base' is not assignable to type 'Derived2'.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts (17 errors) ====
    // members N and M of types S and T have the same name, same accessibility, same optionality, and N is not assignable M
    
    module OnlyDerived {
        class Base { foo: string; }
        class Derived extends Base { bar: string; }
        class Derived2 extends Base { baz: string; }
    
        class S { foo: Derived; }
        class T { foo: Derived2; }
        var s: S;
        var t: T;
    
        interface S2 { foo: Derived; }
        interface T2 { foo: Derived2; }
        var s2: S2;
        var t2: T2;
    
        var a: { foo: Derived; }
        var b: { foo: Derived2; }
    
        var a2 = { foo: new Derived() };
        var b2 = { foo: new Derived2() };
    
        s = t; // error
        ~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|S|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Property 'bar' is missing in type '{|Derived2|2|}' but required in type '{|Derived|3|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:34: 'bar' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:9:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:8:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        t = s; // error
        ~
!!! error TS2322: Type '{|S|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Property 'baz' is missing in type '{|Derived|2|}' but required in type '{|Derived2|3|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:35: 'baz' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:8:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:9:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
        s = s2; // ok
        s = a2; // ok
    
        s2 = t2; // error
        ~~
!!! error TS2322: Type '{|T2|0|}' is not assignable to type '{|S2|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|2|}' is not assignable to type '{|Derived|3|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:14:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:13:15
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        t2 = s2; // error
        ~~
!!! error TS2322: Type '{|S2|0|}' is not assignable to type '{|T2|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived|2|}' is not assignable to type '{|Derived2|3|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:13:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:14:15
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
        s2 = t; // error
        ~~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{|S2|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|2|}' is not assignable to type '{|Derived|3|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:9:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:13:15
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        s2 = b; // error
        ~~
!!! error TS2322: Type '{ {|foo|0|}: {|Derived2|1|}; }' is not assignable to type '{|S2|2|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|3|}' is not assignable to type '{|Derived|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:19:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:13:15
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        s2 = a2; // ok
    
        a = b; // error
        ~
!!! error TS2322: Type '{ {|foo|0|}: {|Derived2|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|4|}' is not assignable to type '{|Derived|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:19:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:18:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        b = a; // error
        ~
!!! error TS2322: Type '{ {|foo|0|}: {|Derived|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived2|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived|4|}' is not assignable to type '{|Derived2|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:18:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:19:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
        a = s; // ok
        a = s2; // ok
        a = a2; // ok
    
        a2 = b2; // error
        ~~
!!! error TS2322: Type '{ {|foo|0|}: {|Derived2|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|4|}' is not assignable to type '{|Derived|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:22:16
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:21:16
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        b2 = a2; // error
        ~~
!!! error TS2322: Type '{ {|foo|0|}: {|Derived|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived2|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived|4|}' is not assignable to type '{|Derived2|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:21:16
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:22:16
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
        a2 = b; // error
        ~~
!!! error TS2322: Type '{ {|foo|0|}: {|Derived2|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|4|}' is not assignable to type '{|Derived|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:19:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:21:16
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        a2 = t2; // error
        ~~
!!! error TS2322: Type '{|T2|0|}' is not assignable to type '{ {|foo|1|}: {|Derived|2|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|3|}' is not assignable to type '{|Derived|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:14:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:21:16
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
        a2 = t; // error
        ~~
!!! error TS2322: Type '{|T|0|}' is not assignable to type '{ {|foo|1|}: {|Derived|2|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Derived2|3|}' is not assignable to type '{|Derived|4|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:9:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:21:16
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:6:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:5:11
    }
    
    module WithBase {
        class Base { foo: string; }
        class Derived extends Base { bar: string; }
        class Derived2 extends Base { baz: string; }
    
        class S { foo: Base; }
        class T { foo: Derived2; }
        var s: S;
        var t: T;
    
        interface S2 { foo: Base; }
        interface T2 { foo: Derived2; }
        var s2: S2;
        var t2: T2;
    
        var a: { foo: Base; }
        var b: { foo: Derived2; }
    
        var a2 = { foo: new Base() };
        var b2 = { foo: new Derived2() };
    
        s = t; // ok
        t = s; // error
        ~
!!! error TS2322: Type '{|S|0|}' is not assignable to type '{|T|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Property 'baz' is missing in type '{|Base|2|}' but required in type '{|Derived2|3|}'.
!!! related TS2728 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:35: 'baz' is declared here.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:53:11
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:54:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:49:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:11
        s = s2; // ok
        s = a2; // ok
    
        s2 = t2; // ok
        t2 = s2; // error
        ~~
!!! error TS2322: Type '{|S2|0|}' is not assignable to type '{|T2|1|}'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Base|2|}' is not assignable to type '{|Derived2|3|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:58:15
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:59:15
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:49:11
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:11
        s2 = t; // ok
        s2 = b; // ok
        s2 = a2; // ok
    
        a = b; // ok
        b = a; // error
        ~
!!! error TS2322: Type '{ {|foo|0|}: {|Base|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived2|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Base|4|}' is not assignable to type '{|Derived2|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:63:14
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:49:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:64:14
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:49:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:11
        a = s; // ok
        a = s2; // ok
        a = a2; // ok
    
        a2 = b2; // ok
        b2 = a2; // error
        ~~
!!! error TS2322: Type '{ {|foo|0|}: {|Base|1|}; }' is not assignable to type '{ {|foo|2|}: {|Derived2|3|}; }'.
!!! error TS2322:   Types of property 'foo' are incompatible.
!!! error TS2322:     Type '{|Base|4|}' is not assignable to type '{|Derived2|5|}'.
!!! annotated symbol 0 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:66:16
!!! annotated symbol 1 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:49:11
!!! annotated symbol 2 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:67:16
!!! annotated symbol 3 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:11
!!! annotated symbol 4 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:49:11
!!! annotated symbol 5 tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembers4.ts:51:11
        a2 = b; // ok
        a2 = t2; // ok
        a2 = t; // ok
    }